@@ -33,8 +33,8 @@ class UserBlog extends B_Model
 		'blog_manager_url' => array ('type' => 'string','size' => 0,'required' => true),
 		'blog_username' => array ('type' => 'string','size' => 255,'required' => false),
 		'blog_password' => array ('type' => 'string','size' => 255,'required' => false),
-		'feeding_auto' => array ('type' => 'integer','size' => 0,'required' => false),
-		'feeding_auto_updated_at' => array ('type' => 'date','size' => 0,'required' => false),
+		'enqueueing_auto' => array ('type' => 'integer','size' => 0,'required' => false),
+		'enqueueing_auto_updated_at' => array ('type' => 'date','size' => 0,'required' => false),
 		'publication_auto' => array ('type' => 'integer','size' => 0,'required' => false),
 		'publication_interval' => array ('type' => 'integer','size' => 0,'required' => false),
 		'keywords' => array ('type' => 'string','size' => 0,'required' => false),
@@ -130,7 +130,7 @@ class UserBlog extends B_Model
         'name',
         'blog_username',
         'blog_password',
-        'feeding_auto',
+        'enqueueing_auto',
         'publication_auto',
         'publication_interval',
         'keywords'
