@@ -252,7 +252,7 @@ div.articlecontentshow
     padding-left: 15px;
     margin-top: -5px;
 }
-#queuefeeding
+#enqueueing
 {
     float: left;
     padding-left: 30px;
